2nd task completed

--- a/rare_crew_csharp_task/Web.config
+++ b/rare_crew_csharp_task/Web.config
@@ -8,6 +8,10 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
+    <add key="URL" value="https://rc-vault-fap-live-1.azurewebsites.net/api/gettimeentries?code=vO17RnE8vuzXzPJo5eaLLjXjmRW07law99QTD90zat9FfOQJKKUcgQ==" />
+    <add key="ChartTitle" value="Total percentage of working hours by an employee" />
+    <add key="ChartWidth" value="1366" />
+    <add key="ChartHeight" value="768" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
